# Sol-paymaster

./: Anchor.toml  package-lock.json  package.json
programs/mawari/: Cargo.toml
programs/mawari/src/: error.rs  events.rs  lib.rs
programs/mawari/src/instructions/: deposit.rs  initialize.rs  mod.rs  validate.rs  whitelist.rs  withdraw.rs
programs/mawari/src/state/: mawari_state.rs  mod.rs
scripts/: mawari-spl-token.ts
tests/: newcounter.ts  paymaster.test.ts  revertTestCases.test.ts
